--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div id="out-grafana" class="p-3 font-medium whitespace-nowrap" hidden> Available only in grafana page </div>
+  <div id="out-grafana" class="p-3 font-medium whitespace-nowrap" hidden> Available only in grafana dashboard </div>
   <div id="in-grafana" class="p-3">
     <div class="w-full flex items-center justify-center">
         <img id='tenant-logo' width="32px" src="./icon.png">
